--- a/privacy policy.html
+++ b/privacy policy.html
@@ -9,6 +9,7 @@
       color: #00ccff;
       font-family: monospace;
       padding: 20px;
+      padding-top: 100px; /* space so header doesn't overlap */
     }
     h1, h2 {
       display: flex;
@@ -20,12 +21,44 @@
       height: 24px;
       fill: #00ccff;
     }
-    .section {
-      margin-bottom: 20px;
+    .section { margin-bottom: 20px; }
+
+    /* 🔹 Header styles */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+      border-bottom: 1px solid rgba(57,255,20,0.2);
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      background: #000;
+      z-index: 1000;
     }
+    .logo { font-weight: 700; font-size: 20px; color: #39ff14; }
+    nav { display: flex; gap: 15px; }
+    nav a { text-decoration: none; color: #0f0; font-weight: 500; }
+    nav a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
+
+  <!-- 🔹 HEADER -->
+  <header>
+    <div class="logo">CyberTech</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="programs.html">Programs</a>
+      <a href="cyberx.html">Cyberx AI</a>
+      <a href="subscription.html">Subscription</a>
+      <a href="privacy-policy.html">Privacy</a>
+      <a href="playlist.html">Playlist</a>
+      <a href="pay.html" class="cta-btn">Donate</a>
+    </nav>
+  </header>
+
+  <!-- 🔹 PAGE CONTENT -->
   <h1>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path d="M12 2C8 2 5 5 5 9V13C5 17 8 20 12 22C16 20 19 17 19 13V9C19 5 16 2 12 2Z"/>
@@ -41,14 +74,15 @@
   <div class="section">
     <h2>🛡️ Security</h2>
     <p>Your information is protected using industry-standard encryption and secure protocols.</p>
-    <p>If you encouter or suspect any threat or insecurity aspect on this website, immediately contact Dcyberx for imediate action
+    <p>If you encounter or suspect any threat or insecurity aspect on this website, immediately contact Dcyberx for immediate action.</p>
   </div>
 
   <div class="section">
     <h2>⚙️ User Control</h2>
-    <p>You may request desubscribe through Dcyberx at any time. But i kindly garantee the best service delivery</p>
-    <p>The time of desubscription is 24 hrs from the subscription time.
-    <p>The refund is averaged to the reason inrelation to participation statistics
+    <p>You may request to unsubscribe through Dcyberx at any time. I kindly guarantee the best service delivery.</p>
+    <p>The time of unsubscription is 24 hrs from the subscription time.</p>
+    <p>The refund is averaged to the reason in relation to participation statistics.</p>
   </div>
+
 </body>
 </html>
