--- a/cyberx.html
+++ b/cyberx.html
@@ -14,7 +14,20 @@
       align-items: center;
       height: 100vh;
       margin: 0;
+      padding-top: 100px; /* space for fixed header */
     }
+    /* 🔹 Header styles */
+    header {
+      display:flex; justify-content:space-between; align-items:center;
+      padding:12px 20px; border-bottom:1px solid rgba(57,255,20,0.2);
+      position:fixed; top:0; left:0; right:0;
+      background:#000; z-index:1000;
+    }
+    .logo { font-weight:700; font-size:20px; color:#39ff14; }
+    nav { display:flex; gap:15px; }
+    nav a { text-decoration:none; color:#0f0; font-weight:500; }
+    nav a:hover { text-decoration:underline; }
+
     #chat-container {
       width: 380px;
       background: #161b22;
@@ -39,88 +52,68 @@
       border-radius: 50%;
       border: 2px solid #00ff99;
     }
-    #header h3 {
-      margin: 0;
-      font-size: 16px;
-      color: #00ff99;
-    }
+    #header h3 { margin: 0; font-size: 16px; color: #00ff99; }
     #chat-box {
-      flex: 1;
-      overflow-y: auto;
-      padding: 10px;
-      background: #0d1117;
+      flex: 1; overflow-y: auto; padding: 10px; background: #0d1117;
     }
     .bubble {
-      max-width: 75%;
-      padding: 10px 14px;
-      margin: 6px 0;
-      border-radius: 18px;
-      font-size: 14px;
-      line-height: 1.4;
-      display: inline-block;
-      clear: both;
+      max-width: 75%; padding: 10px 14px; margin: 6px 0;
+      border-radius: 18px; font-size: 14px; line-height: 1.4;
+      display: inline-block; clear: both;
     }
     .bot {
-      background: #202c33;
-      color: #e6edf3;
-      float: left;
+      background: #202c33; color: #e6edf3; float: left;
       border-bottom-left-radius: 4px;
     }
     .user {
-      background: #00ff99;
-      color: #000;
-      float: right;
+      background: #00ff99; color: #000; float: right;
       border-bottom-right-radius: 4px;
     }
     #input-area {
-      display: flex;
-      padding: 10px;
-      background: #161b22;
+      display: flex; padding: 10px; background: #161b22;
       border-top: 1px solid #30363d;
     }
     #user-input {
-      flex: 1;
-      border: none;
-      border-radius: 20px;
-      padding: 10px 14px;
-      background: #21262d;
-      color: #e6edf3;
-      outline: none;
-      font-size: 14px;
+      flex: 1; border: none; border-radius: 20px;
+      padding: 10px 14px; background: #21262d;
+      color: #e6edf3; outline: none; font-size: 14px;
     }
     #send-btn {
-      background: #00ff99;
-      color: #000;
-      border: none;
-      padding: 10px 16px;
-      border-radius: 50%;
-      margin-left: 8px;
-      cursor: pointer;
-      font-weight: bold;
+      background: #00ff99; color: #000; border: none;
+      padding: 10px 16px; border-radius: 50%;
+      margin-left: 8px; cursor: pointer; font-weight: bold;
     }
     .categories {
-      display: flex;
-      justify-content: space-around;
-      padding: 6px;
-      background: #161b22;
+      display: flex; justify-content: space-around;
+      padding: 6px; background: #161b22;
       border-bottom: 1px solid #30363d;
     }
     .categories button {
-      background: #21262d;
-      border: 1px solid #00ff99;
-      color: #00ff99;
-      padding: 6px 10px;
-      border-radius: 16px;
-      cursor: pointer;
-      font-size: 12px;
+      background: #21262d; border: 1px solid #00ff99;
+      color: #00ff99; padding: 6px 10px;
+      border-radius: 16px; cursor: pointer; font-size: 12px;
     }
-    .categories button:hover {
-      background: #00ff99;
-      color: #000;
-    }
+    .categories button:hover { background: #00ff99; color: #000; }
   </style>
 </head>
 <body>
+
+  <!-- 🔹 GLOBAL HEADER -->
+  <header>
+    <div class="logo">CyberTech</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="programs.html">Programs</a>
+      <a href="cyberx.html">Cyberx AI</a>
+      <a href="subscription.html">Subscription</a>
+      <a href="privacy-policy.html">Privacy</a>
+      <a href="playlist.html">Playlist</a>
+      <a href="pay.html" class="cta-btn">Donate</a>
+    </nav>
+  </header>
+
+  <!-- 🔹 CHAT CONTAINER -->
   <div id="chat-container">
     <div id="header">
       <img src="Cyberx.png" alt="CyberX logo">
@@ -178,7 +171,6 @@
 
     function respond(message) {
       let reply = "";
-
       if (message.includes("who") && message.includes("you")) {
         reply = "I’m CyberX — the calm, honest assistant created by my father, Dcyberx.";
       }
@@ -202,20 +194,4 @@
           "Smile — it’s Sunnah! 😊",
           "Pray on time and keep your heart pure 💚."
         ];
-        reply = reminders[Math.floor(Math.random() * reminders.length)];
-      }
-      else if (message.includes("hi") || message.includes("hello") || message.includes("salam")) {
-        reply = "Assalam alaikum warahmatullahi wabarakatuh 🌙 How are you feeling today?";
-      }
-      else {
-        reply = "Interesting... tell me more so I can relate to it.";
-      }
-
-      appendMessage("bot", reply);
-    }
-  </script>
-</body>
-</html>
-
-
-
+        reply =
