--- a/aboutsite.html
+++ b/aboutsite.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>About CyberTech Site</title>
+  <style>
+    body {
+      background-color: #0d0d0d;
+      color: #00ff99;
+      font-family: monospace;
+      padding: 20px;
+      padding-top: 100px; /* space so header doesn't overlap */
+    }
+    h1 {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .section { margin-bottom: 20px; }
 
+    /* 🔹 Header styles */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+      border-bottom: 1px solid rgba(57,255,20,0.2);
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      background: #000;
+      z-index: 1000;
+    }
+    .logo { font-weight: 700; font-size: 20px; color: #39ff14; }
+    nav { display: flex; gap: 15px; }
+    nav a { text-decoration: none; color: #0f0; font-weight: 500; }
+    nav a:hover { text-decoration: underline; }
+  </style>
+</head>
+<body>
+
+  <!-- 🔹 HEADER -->
+  <header>
+    <div class="logo">CyberTech</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="programs.html">Programs</a>
+      <a href="cyberx.html">Cyberx AI</a>
+      <a href="subscription.html">Subscription</a>
+      <a href="privacy-policy.html">Privacy</a>
+      <a href="playlist.html">Playlist</a>
+      <a href="pay.html" class="cta-btn">Donate</a>
+    </nav>
+  </header>
+
+  <!-- 🔹 PAGE CONTENT -->
+  <h1>🌐 About CyberTech Site</h1>
+
+  <div class="section">
+    <p><strong>CyberTech</strong> is a creative website built with HTML and hosted on GitHub.</p>
+    <p>It was developed by <strong>Dcyberx</strong>, who has a passion for software engineering, cybersecurity, and 3D modeling.</p>
+    <p>The site reflects his mindset, interests, and hobbies, while also showcasing cool features for the best user experience.</p>
+    <p>CyberTech is not only a platform for learning and exploration but also a perspective into how Dcyberx views reality and technology.</p>
+    <p>It stands as one of his ongoing projects, combining innovation with creativity.</p>
+  </div>
+
+</body>
+</html>
