--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>About Dcyberx</title>
+  <style>
+    body {
+      background-color: #0d0d0d;
+      color: #00ff99;
+      font-family: monospace;
+      padding: 20px;
+      padding-top: 100px; /* space so header doesn't overlap */
+    }
+    h1 {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .section { margin-bottom: 20px; }
 
+    /* 🔹 Header styles */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+      border-bottom: 1px solid rgba(57,255,20,0.2);
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      background: #000;
+      z-index: 1000;
+    }
+    .logo { font-weight: 700; font-size: 20px; color: #39ff14; }
+    nav { display: flex; gap: 15px; }
+    nav a { text-decoration: none; color: #0f0; font-weight: 500; }
+    nav a:hover { text-decoration: underline; }
+  </style>
+</head>
+<body>
+
+  <!-- 🔹 HEADER -->
+  <header>
+    <div class="logo">CyberTech</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="programs.html">Programs</a>
+      <a href="cyberx.html">Cyberx AI</a>
+      <a href="subscription.html">Subscription</a>
+      <a href="privacy-policy.html">Privacy</a>
+      <a href="playlist.html">Playlist</a>
+      <a href="pay.html" class="cta-btn">Donate</a>
+    </nav>
+  </header>
+
+  <!-- 🔹 PAGE CONTENT -->
+  <h1>👤 About Dcyberx</h1>
+
+  <div class="section">
+    <p><strong>Dcyberx</strong> is Mugerwa Habib Arafat, a Tanzanian‑Ugandan teen software enthusiast and the creator of CyberTech.</p>
+    <p>He is a Muslim and a hardworking person who is passionate about technology, coding, and creative projects.</p>
+    <p>His favorite color is <strong>green</strong>, and he loves <strong>eagles</strong>, <strong>kittens</strong>, and <strong>chicks</strong>.</p>
+    <p>Hobbies include camping 🏕️, badminton 🏸, creative writing ✍️, and coding 💻.</p>
+    <p>He is actively working on projects such as the <strong>CyberTech website</strong> and <strong>Dcyberx Nexus Academy</strong>.</p>
+    <p>This site reflects his mindset, creativity, and dedication to innovation.</p>
+  </div>
+
+</body>
+</html>
