--- a/privacy policy.html
+++ b/privacy policy.html
@@ -81,7 +81,7 @@
     <h2>⚙️ User Control</h2>
     <p>You may request to unsubscribe through Dcyberx at any time. But I kindly guarantee the best service delivery.</p>
     <p>The time of unsubscription is 24 hrs from the subscription time.</p>
-    <p>The refund is averaged to the reason in relation to participation statistics. As stated in the <a href="https://Dcyberx.github.io/subscription.html">Subscription policy</a></p>
+    <p>The refund is averaged to the reason in relation to participation statistics. As stated in the <a href="https://github.com/Dcyberx/Dcyberx.github.io/blob/main/subscription.html">Subscription policy</a></p>
   </div>
 
 </body>
