--- a/combinedpage.html
+++ b/combinedpage.html
@@ -40,12 +40,12 @@
 <body>
   <!-- Left side: Playlist -->
   <div class="left">
-    <iframe src="playlist.html"></iframe>
+    <iframe src="https://Dcyberx.github.io/playlist.html"></iframe>
   </div>
 
   <!-- Right side: AI + Home button -->
   <div class="right">
-    <iframe src="cyberx.html"></iframe>
+    <iframe src="https://Dcyberx.github.io/cyberx.html"></iframe>
     <button class="home-btn" onclick="location.href='index.html'">Home</button>
   </div>
 </body>
