--- a/pay.html
+++ b/pay.html
@@ -2,14 +2,14 @@
 <header>
   <div class="logo">CyberTech</div>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="programs.html">Programs</a>
-    <a href="cyberx.html">Cyberx AI</a>
-    <a href="subscription.html">Subscription</a>
-    <a href="privacy-policy.html">Privacy</a>
-    <a href="playlist.html">Playlist</a>
-    <a href="pay.html" class="cta-btn">Donate</a>
+    <a href="https://Dcyberx.github.io/index.html">Home</a>
+    <a href="https://Dcyberx.github.io/about.html">About</a>
+    <a href="https://Dcyberx.github.io/programs.html">Programs</a>
+    <a href="https://Dcyberx.github.io/cyberx.html">Cyberx AI</a>
+    <a href="https://Dcyberx.github.io/subscription.html">Subscription</a>
+    <a href="https://Dcyberx.github.io/privacy-policy.html">Privacy</a>
+    <a href="https://Dcyberx.github.io/playlist.html">Playlist</a>
+    <a href="https://Dcyberx.github.io/pay.html" class="cta-btn">Donate</a>
   </nav>
 </header>
 
