--- a/subscription.html
+++ b/subscription.html
@@ -66,14 +66,14 @@
   <header>
     <div class="logo">CyberTech</div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="programs.html">Programs</a>
-      <a href="cyberx.html">Cyberx AI</a>
-      <a href="subscription.html">Subscription</a>
-      <a href="privacy-policy.html">Privacy</a>
-      <a href="playlist.html">Playlist</a>
-      <a href="pay.html" class="cta-btn">Donate</a>
+      <a href="https://Dcyberx.github.io/index.html">Home</a>
+      <a href="https://Dcyberx.github.io/about.html">About</a>
+      <a href="https://Dcyberx.github.io/programs.html">Programs</a>
+      <a href="https://Dcyberx.github.io/cyberx.html">Cyberx AI</a>
+      <a href="https://Dcyberx.github.io/subscription.html">Subscription</a>
+      <a href="https://Dcyberx.github.io/privacy-policy.html">Privacy</a>
+      <a href="https://Dcyberx.github.io/playlist.html">Playlist</a>
+      <a href="https://Dcyberx.github.io/pay.html" class="cta-btn">Donate</a>
     </nav>
   </header>
 
@@ -143,12 +143,12 @@
 
   <div class="section">
     <h2>❌ Cancellation & Termination</h2>
-    <p>Subscribers may request for a cancel/termination anytime via <a href="mailto:Dcyberx@proton.me">email</a> or direct request by also filling out a refund form. Dcyberx Nexus reserves the right to suspend access for misuse, fraud, or violation of community rules.</p>
+    <p>Subscribers may request for a cancel/termination anytime via <a href="https://mailto:Dcyberx@proton.me">email</a> or direct request by also filling out a refund form. Dcyberx Nexus reserves the right to suspend access for misuse, fraud, or violation of community rules.</p>
   </div>
 
   <div class="section">
     <h2>🛠️ Support & Contact</h2>
-    <p>For help, reach out via WhatsApp, <a href="mailto:Dcyberx@proton.me">email</a>, or in-person during academy hours. Response time is typically within 24–48 hours.</p>
+    <p>For help, reach out via WhatsApp, <a href="https://mailto:Dcyberx@proton.me">email</a>, or in-person during academy hours. Response time is typically within 24–48 hours.</p>
   </div>
 
   <div class="footer">
