--- a/pay.html
+++ b/pay.html
@@ -1,14 +1,67 @@
 <!-- 🔹 GLOBAL HEADER -->
 <header>
   <div class="logo">CyberTech</div>
-  <nav>
-    <a href="https://Dcyberx.github.io/index.html">Home</a>
-    <a href="https://Dcyberx.github.io/about.html">About</a>
-    <a href="https://Dcyberx.github.io/programs.html">Programs</a>
+  <div class="hamburger" onclick="toggleMenu(this)">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <nav id="navbar">
+    <!-- Programs -->
+    <div class="dropdown">
+      <div class="dropdown-btn">Programs</div>
+      <div class="dropdown-content">
+        <a href="#">Dcyberx Nexus Academy</a>
+        <a href="#">Gumroad products</a>
+      </div>
+    </div>
+
+    <!-- Subscriptions -->
+    <a href="https://Dcyberx.github.io/recaptcha.html">Subscriptions</a>
+
+    <!-- Socials -->
+    <div class="dropdown">
+      <div class="dropdown-btn">Socials</div>
+      <div class="dropdown-content">
+        <a href="https://www.instagram.com/dcyberx.1" target="_blank">Instagram</a>
+        <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
+        <a href="https://discord.gg/833GaF3R" target="_blank">CyberTech Discord</a>
+        <a href="mailto:Dcyberx@proton.me">email</a>
+        <a href="tel:+256763753544" target="_blank">Telephone</a>
+      </div>
+    </div>
+
+    <!-- Policies -->
+    <div class="dropdown">
+      <div class="dropdown-btn">Policies</div>
+      <div class="dropdown-content">
+        <a href="https://Dcyberx.github.io/privacy policy.html">Privacy Policy</a>
+        <a href="https://Dcyberx.github.io/copyright.html">Copyright</a>
+        <a href="https://Dcyberx.github.io/subscription.html">Subscription policy</a>
+      </div>
+    </div>
+
+    <!-- Cyberx AI -->
     <a href="https://Dcyberx.github.io/cyberx.html">Cyberx AI</a>
-    <a href="https://Dcyberx.github.io/subscription.html">Subscription</a>
-    <a href="https://Dcyberx.github.io/privacy-policy.html">Privacy</a>
-    <a href="https://Dcyberx.github.io/playlist.html">Playlist</a>
+
+    <!-- About -->
+    <div class="dropdown">
+      <div class="dropdown-btn">About</div>
+      <div class="dropdown-content">
+        <a href="https://Dcyberx.github.io/aboutme.html">Dcyberx</a>
+        <a href="https://Dcyberx.github.io/aboutsite.html">CyberTech</a>
+          </div>
+        </div>
+        
+    <!--More -->
+    <div class="dropdown">
+      <div class="dropdown-btn">More</div>
+      <div class="dropdown-content">
+        <a href="https://Dcyberx.github.io/playlist.html">Playlist</a>
+      </div>
+    </div>
+
     <a href="https://Dcyberx.github.io/pay.html" class="cta-btn">Donate</a>
   </nav>
 </header>
