--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
 
     <!-- Subscriptions -->
-    <a href="https://Dcyberx.github.io/recaptcha.html">Subscriptions</a>
+    <a href="recaptcha.html">Subscriptions</a>
 
     <!-- Socials -->
     <div class="dropdown">
@@ -211,21 +211,21 @@
     <div class="dropdown">
       <div class="dropdown-btn">Policies</div>
       <div class="dropdown-content">
-        <a href="https://Dcyberx.github.io/privacy policy.html">Privacy Policy</a>
-        <a href="https://Dcyberx.github.io/copyright.html">Copyright</a>
-        <a href="https://Dcyberx.github.io/subscription.html">Subscription policy</a>
+        <a href="privacy policy.html">Privacy Policy</a>
+        <a href="copyright.html">Copyright</a>
+        <a href="subscription.html">Subscription policy</a>
       </div>
     </div>
 
     <!-- Cyberx AI -->
-    <a href="https://Dcyberx.github.io/cyberx.html">Cyberx AI</a>
+    <a href="cyberx.html">Cyberx AI</a>
 
     <!-- About -->
     <div class="dropdown">
       <div class="dropdown-btn">About</div>
       <div class="dropdown-content">
-        <a href="https://Dcyberx.github.io/aboutme.html">Dcyberx</a>
-        <a href="https://Dcyberx.github.io/aboutsite.html">CyberTech</a>
+        <a href="aboutme.html">Dcyberx</a>
+        <a href="aboutsite.html">CyberTech</a>
           </div>
         </div>
         
@@ -233,11 +233,11 @@
     <div class="dropdown">
       <div class="dropdown-btn">More</div>
       <div class="dropdown-content">
-        <a href="https://Dcyberx.github.io/playlist.html">Playlist</a>
+        <a href="playlist.html">Playlist</a>
       </div>
     </div>
 
-    <a href="https://Dcyberx.github.io/pay.html" class="cta-btn">Donate</a>
+    <a href="pay.html" class="cta-btn">Donate</a>
     <div class="theme-toggle" onclick="toggleTheme()">🌙/☀️</div>
   </nav>
 </header>
