--- a/privacy policy.html
+++ b/privacy policy.html
@@ -6,10 +6,9 @@
   <style>
     body {
       background-color: #0d0d0d;
-      color: #00ff99;
+      color: #00ccff;
       font-family: monospace;
       padding: 20px;
-      padding-top: 100px; /* space so header doesn't overlap */
     }
     h1, h2 {
       display: flex;
@@ -21,97 +20,12 @@
       height: 24px;
       fill: #00ccff;
     }
-    .section { margin-bottom: 20px; }
-
-    /* 🔹 Header styles */
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-      border-bottom: 1px solid rgba(57,255,20,0.2);
-      position: fixed;
-      top: 0; left: 0; right: 0;
-      background: #000;
-      z-index: 1000;
+    .section {
+      margin-bottom: 20px;
     }
-    .logo { font-weight: 700; font-size: 20px; color: #39ff14; }
-    nav { display: flex; gap: 15px; }
-    nav a { text-decoration: none; color: #0f0; font-weight: 500; }
-    nav a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
-
-  <!-- 🔹 HEADER -->
-<header>
-  <div class="logo">CyberTech</div>
-  <div class="hamburger" onclick="toggleMenu(this)">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-
-  <nav id="navbar">
-    <!-- Programs -->
-    <div class="dropdown">
-      <div class="dropdown-btn">Programs</div>
-      <div class="dropdown-content">
-        <a href="#">Dcyberx Nexus Academy</a>
-        <a href="#">Gumroad products</a>
-      </div>
-    </div>
-
-    <!-- Subscriptions -->
-    <a href="https://Dcyberx.github.io/recaptcha.html">Subscriptions</a>
-
-    <!-- Socials -->
-    <div class="dropdown">
-      <div class="dropdown-btn">Socials</div>
-      <div class="dropdown-content">
-        <a href="https://www.instagram.com/dcyberx.1" target="_blank">Instagram</a>
-        <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
-        <a href="https://discord.gg/833GaF3R" target="_blank">CyberTech Discord</a>
-        <a href="mailto:Dcyberx@proton.me">email</a>
-        <a href="tel:+256763753544" target="_blank">Telephone</a>
-      </div>
-    </div>
-
-    <!-- Policies -->
-    <div class="dropdown">
-      <div class="dropdown-btn">Policies</div>
-      <div class="dropdown-content">
-        <a href="https://Dcyberx.github.io/privacy policy.html">Privacy Policy</a>
-        <a href="https://Dcyberx.github.io/copyright.html">Copyright</a>
-        <a href="https://Dcyberx.github.io/subscription.html">Subscription policy</a>
-      </div>
-    </div>
-
-    <!-- Cyberx AI -->
-    <a href="https://Dcyberx.github.io/cyberx.html">Cyberx AI</a>
-
-    <!-- About -->
-    <div class="dropdown">
-      <div class="dropdown-btn">About</div>
-      <div class="dropdown-content">
-        <a href="https://Dcyberx.github.io/aboutme.html">Dcyberx</a>
-        <a href="https://Dcyberx.github.io/aboutsite.html">CyberTech</a>
-          </div>
-        </div>
-        
-    <!--More -->
-    <div class="dropdown">
-      <div class="dropdown-btn">More</div>
-      <div class="dropdown-content">
-        <a href="https://Dcyberx.github.io/playlist.html">Playlist</a>
-      </div>
-    </div>
-
-    <a href="https://Dcyberx.github.io/pay.html" class="cta-btn">Donate</a>
-    </nav>
-</header>
-
-  <!-- 🔹 PAGE CONTENT -->
   <h1>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path d="M12 2C8 2 5 5 5 9V13C5 17 8 20 12 22C16 20 19 17 19 13V9C19 5 16 2 12 2Z"/>
@@ -127,15 +41,14 @@
   <div class="section">
     <h2>🛡️ Security</h2>
     <p>Your information is protected using industry-standard encryption and secure protocols.</p>
-    <p>If you encounter or suspect any threat or insecurity aspect on this website, immediately contact Dcyberx for immediate action.</p>
+    <p>If you encouter or suspect any threat or insecurity aspect on this website, immediately contact Dcyberx for imediate action
   </div>
 
   <div class="section">
     <h2>⚙️ User Control</h2>
-    <p>You may request to unsubscribe through Dcyberx at any time. But I kindly guarantee the best service delivery.</p>
-    <p>The time of unsubscription is 24 hrs from the subscription time.</p>
-    <p>The refund is averaged to the reason in relation to participation statistics. As stated in the <a href="https://dcyberx.github.io/subscription.html">Subscription policy</a></p>
+    <p>You may request desubscribe through Dcyberx at any time. But i kindly garantee the best service delivery</p>
+    <p>The time of desubscription is 24 hrs from the subscription time.
+    <p>The refund is averaged to the reason inrelation to participation statistics
   </div>
-
 </body>
 </html>
