--- a/cyberx.html
+++ b/cyberx.html
@@ -7,7 +7,8 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0d1117;
+      background-color: #000000
+;
       color: #000000;
       display: flex;
       justify-content: center;
@@ -30,7 +31,7 @@
 
     #chat-container {
       width: 380px;
-      background: #161b22;
+      background: #4355b9;
       border-radius: 10px;
       box-shadow: 0 0 20px #00ff99;
       display: flex;
@@ -42,9 +43,10 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      border-bottom: 1px solid #30363d;
+      border-bottom: 1px solid #57a0f3;
       padding: 10px;
-      background: #0d1117;
+      background: #000000
+;
     }
     #header img {
       width: 50px;
@@ -54,7 +56,7 @@
     }
     #header h3 { margin: 0; font-size: 16px; color: #00ff99; }
     #chat-box {
-      flex: 1; overflow-y: auto; padding: 10px; background: #0d1117;
+      flex: 1; overflow-y: auto; padding: 10px; background: #000000;
     }
     .bubble {
       max-width: 75%; padding: 10px 14px; margin: 6px 0;
@@ -95,6 +97,16 @@
     }
     .categories button:hover { background: #00ff99; color: #000; }
   </style>
+  <div id="site-header"></div>
+<script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("site-header").innerHTML = html;
+    });
+</script>
+
+
 </head>
 <body>
 
