--- a/playlist.html
+++ b/playlist.html
@@ -74,6 +74,16 @@
     nav a { text-decoration: none; color: #0f0; font-weight: 500; }
     nav a:hover { text-decoration: underline; }
   </style>
+  <div id="site-header"></div>
+<script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("site-header").innerHTML = html;
+    });
+</script>
+
+
 </head>
 <body>
 
