--- a/privacy policy.html
+++ b/privacy policy.html
@@ -6,7 +6,7 @@
   <style>
     body {
       background-color: #0d0d0d;
-      color: #00ccff;
+      color: hsl(125, 76%, 31%);
       font-family: monospace;
       padding: 20px;
     }
@@ -24,6 +24,16 @@
       margin-bottom: 20px;
     }
   </style>
+  <div id="site-header"></div>
+<script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("site-header").innerHTML = html;
+    });
+</script>
+
+
 </head>
 <body>
   <h1>
@@ -40,7 +50,7 @@
 
   <div class="section">
     <h2>🛡️ Security</h2>
-    <p>Your information is protected using industry-standard encryption and secure protocols.</p>
+    <p>Your information is protected using industry-standard encryption and secure protocols.eg http & https</p>
     <p>If you encouter or suspect any threat or insecurity aspect on this website, immediately contact Dcyberx for imediate action
   </div>
 
@@ -48,7 +58,7 @@
     <h2>⚙️ User Control</h2>
     <p>You may request desubscribe through Dcyberx at any time. But i kindly garantee the best service delivery</p>
     <p>The time of desubscription is 24 hrs from the subscription time.
-    <p>The refund is averaged to the reason inrelation to participation statistics
+    <p>The refund is averaged to the reason inrelation to participation statistics. As in the <a href="https://Dcyberx.github.io/Dcyberx">Subcription policy</a>
   </div>
 </body>
 </html>
