--- a/privacy policy.html
+++ b/privacy policy.html
@@ -58,7 +58,7 @@
     <h2>⚙️ User Control</h2>
     <p>You may request desubscribe through Dcyberx at any time. But i kindly garantee the best service delivery</p>
     <p>The time of desubscription is 24 hrs from the subscription time.
-    <p>The refund is averaged to the reason inrelation to participation statistics. As in the <a href="https://Dcyberx.github.io/Dcyberx">Subcription policy</a>
+    <p>The refund is averaged to the reason inrelation to participation statistics. As in the <a href="https://Dcyberx.github.io/subscription.html">Subcription policy</a>
   </div>
 </body>
 </html>
