--- a/header.html
+++ b/header.html
@@ -287,11 +287,27 @@
 
     <a href="pay.html" class="ct-cta">Donate</a>
 
-    <!-- Theme toggle: inline -->
-    <div class="ct-theme-toggle"
-         aria-label="Toggle theme"
-         onclick="document.body.classList.toggle('light-theme')">
-      🌙/☀️
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const savedTheme = localStorage.getItem("theme");
+    if (savedTheme) {
+      document.body.classList.add(savedTheme);
+    }
+  });
+</script>
+
+  // Toggle theme and save preference
+  function toggleTheme() {
+    if (document.body.classList.contains("light-theme")) {
+      document.body.classList.remove("light-theme");
+      localStorage.setItem("theme", "");
+    } else {
+      document.body.classList.add("light-theme");
+      localStorage.setItem("theme", "light-theme");
+    }
+  }
+</script>
+
     </div>
   </nav>
 </header>
