--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
   }
 
   .logo {
-    font-weight: 700;
-    font-size: 20px;
+.logo-img {
+  width: 40px;      /* same as SVG width */
+  height: 40px;     /* same as SVG height */
+  object-fit: contain; /* keeps proportions */
+  display: inline-block;
+  vertical-align: middle; /* aligns with text/buttons */
+}
+
   }
 
   nav {
@@ -175,12 +181,14 @@
 <body>
 
 <header>
-  <div class="logo">CyberTech</div>
-  <div class="hamburger" onclick="toggleMenu(this)">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+  <nav>
+    <!-- PNG Logo that links to homepage -->
+    <a href="index.html" class="logo" aria-label="Homepage">
+      <img src="cyber.png" alt="Cyber Logo" class="logo-img">
+    </a>
+  </nav
+    </div>
+    </div>
 
   <nav id="navbar">
     <!-- Programs -->
