--- a/header.html
+++ b/header.html
@@ -159,16 +159,8 @@
   }
 </style>
 
-<header>
-  <nav>
-    <!-- PNG Logo that links to homepage -->
-    <a href="index.html" class="logo" aria-label="Homepage">
-      <img src="cyber.png" alt="Cyber Logo" class="logo-img">
-    </a>
-  </nav
-    </div>
-    </div>
-
+<header class="ct-header">
+  <div class="ct-logo">CyberTech</div>
 
   <!-- Hamburger: inline toggle (works after innerHTML injection) -->
   <div class="ct-hamburger"
@@ -295,7 +287,11 @@
 
     <a href="pay.html" class="ct-cta">Donate</a>
 
-     <script>   document.addEventListener("DOMContentLoaded", () => {     const savedTheme = localStorage.getItem("theme");     if (savedTheme) {       document.body.classList.add(savedTheme);     }   }); </script>
+    <!-- Theme toggle: inline -->
+    <div class="ct-theme-toggle"
+         aria-label="Toggle theme"
+         onclick="document.body.classList.toggle('light-theme')">
+      🌙/☀️
     </div>
   </nav>
 </header>
